--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,12 +7,14 @@
     <color name="primaryLightColor">#397174</color>
     <color name="primaryDarkColor">#001e22</color>
 
-    <color name="secondaryColor">#ffb4a6</color>
-    <color name="secondaryLightColor">#ffe6d7</color>
-    <color name="secondaryDarkColor">#ca8477</color>
+    <color name="secondaryColor">#ff96a2</color>
+    <color name="secondaryLightColor">#ffc8d3</color>
+    <color name="secondaryDarkColor">#c96673</color>
 
     <color name="primaryTextColor">#ffffff</color>
     <color name="secondaryTextColor">#000000</color>
 
+    <color name="darkGray">#3C3C3C</color>
+    <color name="lightGreen">#8BDDB0</color>
     <color name="lightBackgroundColor">#f5f5f6</color>
 </resources>
