Added layout and ShoppingListFragment

--- a/app/src/main/res/layout/fragment_current_shopping_lists.xml
+++ b/app/src/main/res/layout/fragment_current_shopping_lists.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightBackgroundColor"
-    tools:context=".ui.CurrentShoppingListsFragment">
+    tools:context=".ui.current.CurrentShoppingListsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shoppingListsRecyclerView"
