--- a/app/src/main/res/layout/shoppinglist_element.xml
+++ b/app/src/main/res/layout/shoppinglist_element.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="list"
+            type="com.annalubawa.shoppinglists.domain.model.ShoppingList" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -30,6 +36,7 @@
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
                     app:cardBackgroundColor="@color/secondaryLightColor"
+                    app:cardViewShoppingListBinding="@{list}"
                     app:cardCornerRadius="12dp"
                     app:cardElevation="0dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -65,6 +72,7 @@
                     app:layout_constraintTop_toTopOf="@+id/cardView"
                     android:ellipsize="end"
                     android:maxLines="1"
+                    android:text="@{list.name}"
                     tools:text="My shopping list" />
 
                 <TextView
@@ -90,6 +98,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/groceriesDoneTextView"
                     app:layout_constraintStart_toEndOf="@+id/groceriesDoneTextView"
                     app:layout_constraintTop_toBottomOf="@+id/shoppingListNameTextView"
+                    app:quantityTextBinding="@{list}"
                     tools:text="2/15" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
