--- a/app/src/main/res/layout/delete_list_dialog.xml
+++ b/app/src/main/res/layout/delete_list_dialog.xml
@@ -7,53 +7,52 @@
     android:background="@color/white">
 
     <TextView
-        android:id="@+id/dialogShoppingListTitle"
+        android:id="@+id/dialogDeleteListTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/add_new_shopping_list"
+        android:text="@string/delete_shopping_list"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/dialogShoppingListEditText"
+    <TextView
+        android:id="@+id/dialogDeleteListTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:hint="@string/name"
-        android:inputType="textPersonName"
+        android:text="@string/are_you_sure_you_want_to_delete_this_shopping_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialogShoppingListTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/dialogDeleteListTitle" />
 
     <Button
-        android:id="@+id/dialogShoppingListAddButton"
+        android:id="@+id/dialogDeleteListDeleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/add"
+        android:backgroundTint="@color/warningRed"
+        android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialogShoppingListEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/dialogDeleteListTextView" />
 
     <Button
-        android:id="@+id/dialogShoppingListCancelButton"
+        android:id="@+id/dialogDeleteListCancelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/cancelGray"
         android:text="@string/cancel"
-        app:layout_constraintBottom_toBottomOf="@+id/dialogShoppingListAddButton"
-        app:layout_constraintEnd_toStartOf="@+id/dialogShoppingListAddButton"
-        app:layout_constraintTop_toTopOf="@+id/dialogShoppingListAddButton" />
+        app:layout_constraintBottom_toBottomOf="@+id/dialogDeleteListDeleteButton"
+        app:layout_constraintEnd_toStartOf="@+id/dialogDeleteListDeleteButton"
+        app:layout_constraintTop_toTopOf="@+id/dialogDeleteListDeleteButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
