--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="secondaryTextColor">#000000</color>
 
     <color name="darkGray">#3C3C3C</color>
+    <color name="gray">#787878</color>
     <color name="lightGreen">#8BDDB0</color>
     <color name="warningRed">#933535</color>
     <color name="cancelGray">#C8C8C8</color>
