--- a/app/src/main/res/layout/shoppinglist_element.xml
+++ b/app/src/main/res/layout/shoppinglist_element.xml
@@ -35,10 +35,10 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
-                    app:cardBackgroundColor="@color/secondaryLightColor"
-                    app:cardViewShoppingListBinding="@{list}"
+                    app:cardBackgroundColor="@color/lightRed"
                     app:cardCornerRadius="12dp"
                     app:cardElevation="0dp"
+                    app:cardViewShoppingListBinding="@{list}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="4dp"
-                    android:textColor="@color/secondaryDarkColor"
+                    android:textColor="@color/Red"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="@+id/groceriesDoneTextView"
                     app:layout_constraintStart_toEndOf="@+id/groceriesDoneTextView"
