--- a/app/src/main/res/layout/delete_list_dialog.xml
+++ b/app/src/main/res/layout/delete_list_dialog.xml
@@ -38,7 +38,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/warningRed"
+        android:backgroundTint="@color/deleteRed"
         android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
