--- a/app/src/main/res/layout/shoppinglist_element.xml
+++ b/app/src/main/res/layout/shoppinglist_element.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="16dp"
             app:cardElevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -64,15 +65,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@{list.name}"
                     android:textColor="@color/secondaryTextColor"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cardView"
                     app:layout_constraintTop_toTopOf="@+id/cardView"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="@{list.name}"
                     tools:text="My shopping list" />
 
                 <TextView
