--- a/app/src/main/res/layout/delete_item_dialog.xml
+++ b/app/src/main/res/layout/delete_item_dialog.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/are_you_sure_you_want_to_delete_this_item"
+        android:textColor="@color/darkGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialogDeleteItemTitle" />
