--- a/app/src/main/res/layout/new_item_dialog.xml
+++ b/app/src/main/res/layout/new_item_dialog.xml
@@ -29,6 +29,8 @@
         android:ems="10"
         android:hint="@string/name"
         android:inputType="textPersonName"
+        android:textColor="@color/darkGray"
+        android:textColorHint="@color/cancelGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialogItemTitle" />
@@ -66,6 +68,8 @@
         android:ems="10"
         android:hint="@string/quantity"
         android:inputType="numberDecimal"
+        android:textColor="@color/darkGray"
+        android:textColorHint="@color/cancelGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialogItemNameEditText" />
