Small View models fix :)

--- a/app/src/main/res/layout/shoppinglist_element.xml
+++ b/app/src/main/res/layout/shoppinglist_element.xml
@@ -36,7 +36,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
-                    app:cardBackgroundColor="@color/lightRed"
+                    app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="12dp"
                     app:cardElevation="0dp"
                     app:cardViewShoppingListBinding="@{list}"
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="4dp"
-                    android:textColor="@color/Red"
+                    android:textColor="@color/black"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="@+id/groceriesDoneTextView"
                     app:layout_constraintStart_toEndOf="@+id/groceriesDoneTextView"
