--- a/app/src/main/res/layout/item_element.xml
+++ b/app/src/main/res/layout/item_element.xml
@@ -36,7 +36,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="18dp"
-                    app:cardBackgroundColor="@color/lightRed"
+                    app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="12dp"
                     app:cardElevation="0dp"
                     app:cardViewBinding="@{item.bought}"
